test/banana/typeck/should_fail/invalid_str_concat.banana
a = "test"
a = a - a

# NEW_TEST

a = "test"
a = a * a

# NEW_TEST

a = "test"
a = a / a

# RAISE BananaUnknownOperator